XTLS mode add ws

--- a/VLESS_xtls/config.json
+++ b/VLESS_xtls/config.json
@@ -5,38 +5,81 @@
         "loglevel": "warning"
     },
     "inbounds": [{
-        "port": 443,
-        "protocol": "VLESS",
-        "settings": {
-            "clients": [{
-                "id": "UUID",
-                "flow": "xtls-rprx-direct",
-                "level": 0,
-                "email": "me@idleleo.com"
-            }],
-            "decryption": "none",
-            "fallbacks": [{
-                "dest": 8080,
-                "xver": 1
-            }]
-        },
-        "streamSettings": {
-            "network": "tcp",
-            "security": "xtls",
-            "xtlsSettings": {
-                "minVersion": "1.2",
-                "alpn": [
-                    "http/1.1",
-                    "h2"
-                ],
-                "certificates": [{
-                    "certificateFile": "/etc/idleleo/cert/xray.crt",
-                    "keyFile": "/etc/idleleo/cert/xray.key"
+            "port": 443,
+            "protocol": "VLESS",
+            "settings": {
+                "clients": [{
+                    "id": "UUID",
+                    "flow": "xtls-rprx-direct",
+                    "level": 0,
+                    "email": "me@idleleo.com"
+                }],
+                "decryption": "none",
+                "fallbacks": [{
+                    "dest": 8080,
+                    "xver": 1
                 }]
+            },
+            "streamSettings": {
+                "network": "tcp",
+                "security": "xtls",
+                "xtlsSettings": {
+                    "minVersion": "1.2",
+                    "alpn": ["http/1.1", "h2"],
+                    "certificates": [{
+                        "certificateFile": "/etc/idleleo/cert/xray.crt",
+                        "keyFile": "/etc/idleleo/cert/xray.key"
+                    }]
+                }
+            }
+        },
+        {
+            "port": 10086,
+            "listen": "127.0.0.1",
+            "tag": "VLESS-in",
+            "protocol": "VLESS",
+            "settings": {
+                "clients": [{
+                    "id": "UUID",
+                    "level": 0,
+                    "email": "ws@idleleo.com"
+                }],
+                "decryption": "none"
+            },
+            "streamSettings": {
+                "network": "ws",
+                "security": "none",
+                "wsSettings": {
+                    "path": "/websocket"
+                }
             }
         }
-    }],
+    ],
     "outbounds": [{
-        "protocol": "freedom"
-    }]
+            "protocol": "freedom",
+            "tag": "direct"
+        },
+        {
+            "protocol": "blackhole",
+            "tag": "blocked"
+        }
+    ],
+    "dns": {
+        "servers": [
+            "https+local://1.1.1.1/dns-query",
+            "1.1.1.1",
+            "1.0.0.1",
+            "8.8.8.8",
+            "8.8.4.4",
+            "localhost"
+        ]
+    },
+    "routing": {
+        "domainStrategy": "AsIs",
+        "rules": [{
+            "type": "field",
+            "inboundTag": ["VLESS-in"],
+            "outboundTag": "direct"
+        }]
+    }
 }
