ADD XTLS TLS version modify

--- a/VLESS_xtls/config.json
+++ b/VLESS_xtls/config.json
@@ -72,6 +72,7 @@
             "1.1.1.1",
             "1.0.0.1",
             "localhost",
+            "https+local://dns.google/dns-query",
             "https+local://1.1.1.1/dns-query"
         ]
     },
