--- a/VLESS_tls/config.json
+++ b/VLESS_tls/config.json
@@ -42,7 +42,11 @@
                 "network": "grpc",
                 "security": "none",
                 "grpcSettings": {
-                    "serviceName": "grpc"
+                    "serviceName": "grpc",
+                    "multiMode": true,
+                    "idle_timeout": 20,
+                    "health_check_timeout": 20,
+                    "permit_without_stream": true
                 }
             }
         }
