Fix BUGS  Add Version detection

--- a/VLESS_xtls/config.json
+++ b/VLESS_xtls/config.json
@@ -6,6 +6,7 @@
     },
     "inbounds": [{
             "port": 443,
+            "listen": "0.0.0.0",
             "protocol": "VLESS",
             "tag": "VLESS-XTLS-in",
             "settings": {
