--- a/VLESS_tls/config.json
+++ b/VLESS_tls/config.json
@@ -4,6 +4,23 @@
         "error": "/var/log/xray/error.log",
         "loglevel": "warning"
     },
+    "stats": {},
+    "policy": {
+        "levels": {
+          "0": {
+            "handshake": 4,
+            "connIdle": 300,
+            "uplinkOnly": 2,
+            "downlinkOnly": 5,
+            "statsUserUplink": false,
+            "statsUserDownlink": false
+          }
+        },
+        "system": {
+          "statsInboundUplink": true,
+          "statsInboundDownlink": true
+        }
+    },
     "inbounds": [{
             "port": 10086,
             "listen": "127.0.0.1",
