--- a/VLESS_tls/config.json
+++ b/VLESS_tls/config.json
@@ -4,34 +4,20 @@
         "error": "/var/log/xray/error.log",
         "loglevel": "warning"
     },
-    "stats": {},
-    "policy": {
-        "levels": {
-          "0": {
-            "handshake": 4,
-            "connIdle": 300,
-            "uplinkOnly": 2,
-            "downlinkOnly": 5,
-            "statsUserUplink": false,
-            "statsUserDownlink": false
-          }
-        },
-        "system": {
-          "statsInboundUplink": true,
-          "statsInboundDownlink": true
-        }
-    },
-    "inbounds": [{
+    "inbounds": [
+        {
             "port": 10086,
             "listen": "127.0.0.1",
             "tag": "VLESS-ws-in",
             "protocol": "VLESS",
             "settings": {
-                "clients": [{
-                    "id": "UUID",
-                    "level": 0,
-                    "email": "me@idleleo.com"
-                }],
+                "clients": [
+                    {
+                        "id": "UUID",
+                        "level": 0,
+                        "email": "me@idleleo.com"
+                    }
+                ],
                 "decryption": "none"
             },
             "streamSettings": {
@@ -48,11 +34,13 @@
             "tag": "VLESS-gRPC-in",
             "protocol": "VLESS",
             "settings": {
-                "clients": [{
-                    "id": "UUID",
-                    "level": 0,
-                    "email": "me@idleleo.com"
-                }],
+                "clients": [
+                    {
+                        "id": "UUID",
+                        "level": 0,
+                        "email": "me@idleleo.com"
+                    }
+                ],
                 "decryption": "none"
             },
             "streamSettings": {
@@ -68,7 +56,8 @@
             }
         }
     ],
-    "outbounds": [{
+    "outbounds": [
+        {
             "protocol": "freedom",
             "tag": "direct"
         },
@@ -90,10 +79,15 @@
     },
     "routing": {
         "domainStrategy": "AsIs",
-        "rules": [{
-            "type": "field",
-            "inboundTag": ["VLESS-ws-in", "VLESS-gRPC-in"],
-            "outboundTag": "direct"
-        }]
+        "rules": [
+            {
+                "type": "field",
+                "inboundTag": [
+                    "VLESS-ws-in",
+                    "VLESS-gRPC-in"
+                ],
+                "outboundTag": "direct"
+            }
+        ]
     }
 }
