--- a/VLESS_tls/config.json
+++ b/VLESS_tls/config.json
@@ -49,9 +49,7 @@
                 "grpcSettings": {
                     "serviceName": "grpc",
                     "multiMode": true,
-                    "idle_timeout": 20,
-                    "health_check_timeout": 20,
-                    "permit_without_stream": true
+                    "idle_timeout": 20
                 }
             }
         }
