--- a/VLESS_xtls/config.json
+++ b/VLESS_xtls/config.json
@@ -33,8 +33,8 @@
                 "xtlsSettings": {
                     "minVersion": "1.2",
                     "alpn": [
-                        "http/1.1",
-                        "h2"
+                        "h2",
+                        "http/1.1"
                     ],
                     "rejectUnknownSni": true,
                     "certificates": [
@@ -90,9 +90,7 @@
                 "grpcSettings": {
                     "serviceName": "grpc",
                     "multiMode": true,
-                    "idle_timeout": 20,
-                    "health_check_timeout": 20,
-                    "permit_without_stream": true
+                    "idle_timeout": 20
                 }
             }
         }
