--- a/VLESS_reality/config.json
+++ b/VLESS_reality/config.json
@@ -22,7 +22,7 @@
                 "decryption": "none"
             },
             "streamSettings": {
-                "network": "tcp",
+                "network": "raw",
                 "security": "reality",
                 "realitySettings": {
                     "target": "example.com:443", 
