--- a/.github/workflows/i18n.yml
+++ b/.github/workflows/i18n.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Setup directories
         run: |
           mkdir -p po
-          mkdir -p languages/{en,fa,ru,zh_CN}/LC_MESSAGES
+          mkdir -p languages/{en,fa,ru,zh_CN,ko}/LC_MESSAGES
       
       - name: Extract strings from specified scripts
         run: |
@@ -77,7 +77,7 @@ jobs:
       - name: Update/Create PO files
         run: |
           rm -f po/*.po
-          for lang in zh_CN en fa ru; do
+          for lang in zh_CN en fa ru ko; do
             msginit --no-translator --locale=$lang --input=po/xray_install.pot --output=po/$lang.po
           done
       
@@ -86,8 +86,7 @@ jobs:
       
       - name: Compile MO files
         run: |
-          #cat po/en.po
-          for lang in zh_CN en fa ru; do
+          for lang in zh_CN en fa ru ko; do
             msgfmt --check -v --statistics -o languages/${lang}/LC_MESSAGES/xray_install.mo po/${lang}.po
           done
       
@@ -97,7 +96,7 @@ jobs:
       
       - name: Run i18nspector checks on MO files
         run: |
-          for lang in zh_CN en fa ru; do
+          for lang in zh_CN en fa ru ko; do
             i18nspector check-binary languages/${lang}/LC_MESSAGES/xray_install.mo
           done
       
