Update email and domain references to hey.run
Replaced all instances of 'idleleo.com' with 'hey.run' in configuration files and scripts to reflect updated contact and domain information. Also updated the auto_update.sh script to use a new version and API endpoint.

--- a/VLESS_reality/config.json
+++ b/VLESS_reality/config.json
@@ -16,7 +16,7 @@
                         "id": "UUID",
                         "flow": "xtls-rprx-vision",
                         "level": 0,
-                        "email": "me@idleleo.com"
+                        "email": "me@hey.run"
                     }
                 ],
                 "decryption": "none"
@@ -42,7 +42,7 @@
                     {
                         "id": "UUID",
                         "level": 0,
-                        "email": "ws@idleleo.com"
+                        "email": "ws@hey.run"
                     }
                 ],
                 "decryption": "none"
@@ -65,7 +65,7 @@
                     {
                         "id": "UUID",
                         "level": 0,
-                        "email": "me@idleleo.com"
+                        "email": "me@hey.run"
                     }
                 ],
                 "decryption": "none"
