--- a/VLESS_tls/config.json
+++ b/VLESS_tls/config.json
@@ -15,7 +15,7 @@
                     {
                         "id": "UUID",
                         "level": 0,
-                        "email": "me@idleleo.com"
+                        "email": "me@hey.run"
                     }
                 ],
                 "decryption": "none"
@@ -38,7 +38,7 @@
                     {
                         "id": "UUID",
                         "level": 0,
-                        "email": "me@idleleo.com"
+                        "email": "me@hey.run"
                     }
                 ],
                 "decryption": "none"
