--- a/VLESS_xtls/config.json
+++ b/VLESS_xtls/config.json
@@ -16,7 +16,7 @@
                         "id": "UUID",
                         "flow": "xtls-rprx-vision",
                         "level": 0,
-                        "email": "me@idleleo.com"
+                        "email": "me@hey.run"
                     }
                 ],
                 "decryption": "none",
@@ -51,7 +51,7 @@
                     {
                         "id": "UUID",
                         "level": 0,
-                        "email": "ws@idleleo.com"
+                        "email": "ws@hey.run"
                     }
                 ],
                 "decryption": "none"
@@ -74,7 +74,7 @@
                     {
                         "id": "UUID",
                         "level": 0,
-                        "email": "me@idleleo.com"
+                        "email": "me@hey.run"
                     }
                 ],
                 "decryption": "none"
