Switch protocol from ws/gRPC to xhttp
Migrated all configuration, scripts, and documentation from WebSocket (ws) and gRPC protocols to the new xhttp protocol for VLESS. Removed legacy ws/gRPC code paths, updated config files, firewall rules, and Nginx templates to support only xhttp, and revised README and language files to reflect the protocol change.

--- a/VLESS_reality/config.json
+++ b/VLESS_reality/config.json
@@ -35,7 +35,7 @@
         {
             "port": 10086,
             "listen": "127.0.0.1",
-            "tag": "VLESS-ws-in",
+            "tag": "VLESS-xhttp-in",
             "protocol": "VLESS",
             "settings": {
                 "clients": [
@@ -48,35 +48,10 @@
                 "decryption": "none"
             },
             "streamSettings": {
-                "network": "ws",
+                "network": "xhttp",
                 "security": "none",
-                "wsSettings": {
-                    "path": "/websocket"
-                }
-            }
-        },
-        {
-            "port": 10087,
-            "listen": "127.0.0.1",
-            "tag": "VLESS-gRPC-in",
-            "protocol": "VLESS",
-            "settings": {
-                "clients": [
-                    {
-                        "id": "UUID",
-                        "level": 0,
-                        "email": "me@hey.run"
-                    }
-                ],
-                "decryption": "none"
-            },
-            "streamSettings": {
-                "network": "grpc",
-                "security": "none",
-                "grpcSettings": {
-                    "serviceName": "grpc",
-                    "multiMode": true,
-                    "idle_timeout": 20
+                "xhttpSettings": {
+                    "path": "/xhttp"
                 }
             }
         }
@@ -108,9 +83,8 @@
             {
                 "type": "field",
                 "inboundTag": [
-                    "VLESS-XTLS-in",
-                    "VLESS-ws-in",
-                    "VLESS-gRPC-in"
+                    "VLESS-Reality-in",
+                    "VLESS-xhttp-in"
                 ],
                 "outboundTag": "direct"
             }
