Add .editorconfig and update config/script files
Introduced a new .editorconfig for consistent file formatting. Updated various config and shell script files to fix inbound tag naming, file references, and ensure final newlines for better compatibility and maintainability.

--- a/VLESS_reality/config.json
+++ b/VLESS_reality/config.json
@@ -108,7 +108,7 @@
             {
                 "type": "field",
                 "inboundTag": [
-                    "VLESS-XTLS-in",
+                    "VLESS-Reality-in",
                     "VLESS-ws-in",
                     "VLESS-gRPC-in"
                 ],
