Update DNS and outbound settings in VLESS configs
Added domainStrategy 'UseIPv4v6' to outbound freedom protocol and updated DNS servers to include DNS-over-HTTPS providers in all VLESS config files. Also set disableCache to false for DNS configuration.

Fix disableCache type in VLESS config files

Changed the value of 'disableCache' from string to boolean in VLESS_reality, VLESS_tls, and VLESS_xtls config.json files to ensure correct configuration parsing.

--- a/VLESS_xtls/config.json
+++ b/VLESS_xtls/config.json
@@ -93,6 +93,9 @@
     "outbounds": [
         {
             "protocol": "freedom",
+            "settings": {
+                "domainStrategy": "UseIPv4v6"
+            },
             "tag": "direct"
         },
         {
@@ -102,14 +105,15 @@
     ],
     "dns": {
         "servers": [
-            "8.8.8.8",
-            "8.8.4.4",
-            "1.1.1.1",
-            "1.0.0.1",
-            "localhost",
             "https+local://dns.google/dns-query",
-            "https+local://1.1.1.1/dns-query"
-        ]
+            "https+local://cloudflare-dns.com/dns-query",
+            "https+local://doh.opendns.com/dns-query",
+            "208.67.222.222",
+            "8.8.8.8",
+            "1.1.1.1",
+            "localhost"
+        ],
+        "disableCache": false
     },
     "routing": {
         "domainStrategy": "AsIs",
